# feco3

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  objects.inv  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml
API/: index.html
crates/feco3/: Cargo.toml  README.md
crates/feco3/src/: cover.rs  csv.rs  fec.rs  form.rs  header.rs  lib.rs  line.rs  main.rs  parser.rs  record.rs  schemas.rs  summary.rs
crates/feco3/src/schemas/: lookup.rs  mod.rs  parse.rs
crates/feco3/src/writers/: arrow.rs  base.rs  csv.rs  mod.rs  parquet.rs
crates/feco3/tests/: parse_all.rs
crates/feco3_python/: Cargo.toml
crates/feco3_python/src/: lib.rs
python/: README.md  example.py  mkdocs.yml  pyproject.toml
python/docs/: API.md  index.md
python/feco3/: __init__.py  _version.py
python/src/feco3/: __init__.py
python/test/: common.py  test_basic.py  test_cases.py  test_fecfile.py  test_pyarrow.py  test_writers.py
scripts/: download_mappings.sh  generate_schemas.ipynb
search/: search_index.json
test/: test_basic.py  test_cases.py
test/fecs/: f99.fec  legacy_header.fec  multi_text.fec  slash_form.fec  text.fec
