[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "feco3"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# inspired by
# https://github.com/apache/incubator-opendal/blob/main/bindings/python/pyproject.toml
[tool.maturin]
module-name = "feco3._feco3"
manifest-path = "crates/feco3_python/Cargo.toml"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true
