[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "feco3"
# TODO make this dynamic
# KEEP IN SYNC WITH ../Cargo.toml
version = "0.4.1"
description = "A Rust-backed Python library for parsing .fec files."
requires-python = ">=3.7"
readme = "README.md"
authors = [{ name = "Nick Crews", email = "nicholas.b.crews@gmail.com" }]
dependencies = ["importlib_metadata; python_version < '3.8'"]
keywords = ["fec", "fec-file", "rust", "pyo3", "arrow", "pyarrow"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: File Formats",
  "Topic :: Office/Business :: Financial",
  "Topic :: Text Processing",
]

[project.urls]
Documentation = "https://nickcrews.github.io/feco3/"
Repository = "https://github.com/NickCrews/feco3"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
arrow = ["pyarrow"]

[tool.pdm.dev-dependencies]
lint = ["black", "ruff"]
test = ["pytest"]
docs = ["mkdocs-material", "mkdocstrings[python]", "mkdocs-literate-nav"]

# inspired by
# https://github.com/apache/incubator-opendal/blob/main/bindings/python/pyproject.toml
[tool.maturin]
python-source = "src"
module-name = "feco3._feco3"
manifest-path = "../crates/feco3_python/Cargo.toml"
features = ["pyo3/extension-module"]
strip = true
