[package]
name = "feco3"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for working with FEC data"
readme = "README.md"
homepage = "https://github.com/NickCrews/feco3"
documentation = "https://github.com/NickCrews/feco3"
repository = "https://github.com/NickCrews/feco3"

# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "feco3"

[dependencies]
bytelines = "2.4"
csv = "1.2"
lazy_static = "1.4.0"
log = "0.4"
regex = "1"
serde_json = "1.0"
