[package]
name = "feco3"
version = "0.2.0"
license = "Apache-2.0"
description = "A library for working with FEC data"
readme = "README.md"
edition = {workspace = true}
homepage = {workspace = true}
documentation = "https://docs.rs/feco3"
repository = {workspace = true}

# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "feco3"

[dependencies]
bytelines = "2.4"
chrono = "0.4"
csv = "1.2"
lazy_static = "1.4.0"
log = "0.4"
regex = "1"
serde_json = "1.0"
thiserror = "1.0"
