[package]
name = "feco3"
version = {workspace = true}
license = "Apache-2.0"
description = "A library for working with .fec files"
readme = "README.md"
edition = {workspace = true}
homepage = {workspace = true}
documentation = "https://docs.rs/feco3"
repository = {workspace = true}

# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "feco3"

# TODO: put some of these under feature flags?
[dependencies]
bytelines = "2.4"
chrono = "0.4"
csv = "1.2"
lazy_static = "1.4.0"
log = "0.4"
regex = "1"
serde_json = "1.0"
thiserror = "1.0"
arrow = { version = "40.0.0", features = ["pyarrow"] }
parquet = "40.0"
