[package]
name = "feco3_python"
version = "0.1.0"
edition = {workspace = true}

[lib]
name = "feco3_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
feco3 = { path = "../feco3" }
pyo3-log = "0.8.1"
arrow = { version = "40.0.0", features = ["pyarrow"]}
